--- a/ios-i-book-lover/Scenes/Cell/BookCell/BookCell.xib
+++ b/ios-i-book-lover/Scenes/Cell/BookCell/BookCell.xib
@@ -10,63 +10,79 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BookCell" customModule="BookLover" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="Rdv-7L-ypD" customClass="BookCell" customModule="BookLover" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="140" height="190"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tHq-U1-ggk">
-                    <rect key="frame" x="0.0" y="0.0" width="140" height="120"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="120" id="PAp-rd-Qkh"/>
-                    </constraints>
-                </imageView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JYH-a9-awk" customClass="RatingView" customModule="BookLover" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="125" width="140" height="20"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="20" id="Gez-bt-qwT"/>
-                    </constraints>
-                </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="author" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFv-yz-Leo">
-                    <rect key="frame" x="5" y="150" width="130" height="13.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fgn-3M-HIS">
-                    <rect key="frame" x="5" y="168.5" width="130" height="18"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-            </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BookCell" id="MTr-Q6-McH" customClass="BookCell" customModule="BookLover">
+            <rect key="frame" x="0.0" y="0.0" width="140" height="220"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                <rect key="frame" x="0.0" y="0.0" width="140" height="220"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JW9-Vc-Bt4">
+                        <rect key="frame" x="0.0" y="0.0" width="140" height="220"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tHq-U1-ggk">
+                                <rect key="frame" x="0.0" y="0.0" width="140" height="130"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="130" id="PAp-rd-Qkh"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JYH-a9-awk" customClass="RatingView" customModule="BookLover" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="135" width="140" height="20"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="Gez-bt-qwT"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fgn-3M-HIS">
+                                <rect key="frame" x="0.0" y="160" width="140" height="41.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="author" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFv-yz-Leo">
+                                <rect key="frame" x="0.0" y="206.5" width="140" height="13.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="JYH-a9-awk" secondAttribute="trailing" id="3h7-2p-LVe"/>
+                            <constraint firstItem="tHq-U1-ggk" firstAttribute="top" secondItem="JW9-Vc-Bt4" secondAttribute="top" id="98q-OT-xyt"/>
+                            <constraint firstItem="dFv-yz-Leo" firstAttribute="top" secondItem="Fgn-3M-HIS" secondAttribute="bottom" constant="5" id="Cg2-kw-Jbl"/>
+                            <constraint firstItem="dFv-yz-Leo" firstAttribute="leading" secondItem="JW9-Vc-Bt4" secondAttribute="leading" id="Emk-rG-UJy"/>
+                            <constraint firstAttribute="trailing" secondItem="Fgn-3M-HIS" secondAttribute="trailing" id="SAg-3S-9vA"/>
+                            <constraint firstItem="JYH-a9-awk" firstAttribute="top" secondItem="tHq-U1-ggk" secondAttribute="bottom" constant="5" id="TtT-zw-cgj"/>
+                            <constraint firstAttribute="trailing" secondItem="dFv-yz-Leo" secondAttribute="trailing" id="Uq1-ks-C9N"/>
+                            <constraint firstItem="tHq-U1-ggk" firstAttribute="leading" secondItem="JW9-Vc-Bt4" secondAttribute="leading" id="aR3-Hp-VmG"/>
+                            <constraint firstItem="JYH-a9-awk" firstAttribute="leading" secondItem="JW9-Vc-Bt4" secondAttribute="leading" id="cBa-uv-eFS"/>
+                            <constraint firstAttribute="trailing" secondItem="tHq-U1-ggk" secondAttribute="trailing" id="fg7-0V-Eb1"/>
+                            <constraint firstAttribute="bottom" secondItem="dFv-yz-Leo" secondAttribute="bottom" id="tHu-t5-MH8"/>
+                            <constraint firstItem="Fgn-3M-HIS" firstAttribute="leading" secondItem="JW9-Vc-Bt4" secondAttribute="leading" id="vvX-Lx-afL"/>
+                            <constraint firstItem="Fgn-3M-HIS" firstAttribute="top" secondItem="JYH-a9-awk" secondAttribute="bottom" constant="5" id="xQt-ne-ePm"/>
+                        </constraints>
+                    </view>
+                </subviews>
+            </view>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="dFv-yz-Leo" firstAttribute="centerX" secondItem="Rdv-7L-ypD" secondAttribute="centerX" id="110-yV-qhm"/>
-                <constraint firstItem="tHq-U1-ggk" firstAttribute="top" secondItem="wK3-xi-GPL" secondAttribute="top" id="6Ug-HA-UNO"/>
-                <constraint firstItem="JYH-a9-awk" firstAttribute="leading" secondItem="wK3-xi-GPL" secondAttribute="leading" id="CYJ-3B-Zn8"/>
-                <constraint firstItem="Fgn-3M-HIS" firstAttribute="centerX" secondItem="Rdv-7L-ypD" secondAttribute="centerX" id="Cpk-7t-1hq"/>
-                <constraint firstItem="JYH-a9-awk" firstAttribute="top" secondItem="tHq-U1-ggk" secondAttribute="bottom" constant="5" id="GBa-qu-rxm"/>
-                <constraint firstItem="Fgn-3M-HIS" firstAttribute="top" secondItem="dFv-yz-Leo" secondAttribute="bottom" constant="5" id="K67-jc-r9b"/>
-                <constraint firstItem="dFv-yz-Leo" firstAttribute="top" secondItem="JYH-a9-awk" secondAttribute="bottom" constant="5" id="UZg-4H-u6Y"/>
-                <constraint firstItem="wK3-xi-GPL" firstAttribute="trailing" secondItem="tHq-U1-ggk" secondAttribute="trailing" id="Xyf-ea-uHa"/>
-                <constraint firstItem="wK3-xi-GPL" firstAttribute="bottom" secondItem="Fgn-3M-HIS" secondAttribute="bottom" constant="3.5" id="Ynf-f1-mn6"/>
-                <constraint firstItem="wK3-xi-GPL" firstAttribute="trailing" secondItem="JYH-a9-awk" secondAttribute="trailing" id="hZM-ib-gAt"/>
-                <constraint firstItem="wK3-xi-GPL" firstAttribute="trailing" secondItem="Fgn-3M-HIS" secondAttribute="trailing" constant="5" id="mhB-zp-ngp"/>
-                <constraint firstItem="tHq-U1-ggk" firstAttribute="leading" secondItem="wK3-xi-GPL" secondAttribute="leading" id="xCc-Gl-i7Q"/>
-                <constraint firstItem="wK3-xi-GPL" firstAttribute="trailing" secondItem="dFv-yz-Leo" secondAttribute="trailing" constant="5" id="zGK-Bt-gNb"/>
+                <constraint firstAttribute="trailing" secondItem="JW9-Vc-Bt4" secondAttribute="trailing" id="Edi-od-bRX"/>
+                <constraint firstItem="JW9-Vc-Bt4" firstAttribute="leading" secondItem="MTr-Q6-McH" secondAttribute="leading" id="ZX0-x2-vNd"/>
+                <constraint firstAttribute="bottom" secondItem="JW9-Vc-Bt4" secondAttribute="bottom" id="m5d-dq-EKX"/>
+                <constraint firstItem="JW9-Vc-Bt4" firstAttribute="top" secondItem="MTr-Q6-McH" secondAttribute="top" id="tzD-7Q-cwz"/>
             </constraints>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="wK3-xi-GPL"/>
+            <viewLayoutGuide key="safeArea" id="1aL-Yg-gA1"/>
+            <size key="customSize" width="257" height="190"/>
             <connections>
-                <outlet property="authorLabel" destination="dFv-yz-Leo" id="MBH-Gy-Kw1"/>
-                <outlet property="bookImageView" destination="tHq-U1-ggk" id="BVz-ji-N9r"/>
-                <outlet property="ratingView" destination="JYH-a9-awk" id="xZe-BQ-rMB"/>
-                <outlet property="titleLabel" destination="Fgn-3M-HIS" id="yeG-r7-AdO"/>
+                <outlet property="authorLabel" destination="dFv-yz-Leo" id="jcw-tv-r1D"/>
+                <outlet property="bookImageView" destination="tHq-U1-ggk" id="DNN-eK-xh9"/>
+                <outlet property="ratingView" destination="JYH-a9-awk" id="53N-SG-FeL"/>
+                <outlet property="titleLabel" destination="Fgn-3M-HIS" id="6Vp-1q-9B6"/>
             </connections>
-            <point key="canvasLocation" x="168" y="109"/>
-        </view>
+            <point key="canvasLocation" x="-149" y="-202"/>
+        </collectionViewCell>
     </objects>
 </document>
