--- a/ios-i-book-lover/Scenes/Cell/BookCell/BookListCell.xib
+++ b/ios-i-book-lover/Scenes/Cell/BookCell/BookListCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookListCell" rowHeight="207" id="KGk-i7-Jjw" customClass="BookListCell" customModule="BookLover" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BookListCell" rowHeight="207" id="KGk-i7-Jjw" customClass="BookListCell" customModule="BookLover" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="344" height="207"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -26,7 +26,7 @@
                             <constraint firstAttribute="width" constant="130" id="b2e-F8-by2"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rzf-uM-Gag">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rzf-uM-Gag">
                         <rect key="frame" x="162" y="16" width="166" height="23"/>
                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                         <nil key="textColor"/>
@@ -39,10 +39,10 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X8T-lU-OE5" customClass="RatingView" customModule="BookLover" customModuleProvider="target">
-                        <rect key="frame" x="162" y="89" width="100" height="38"/>
+                        <rect key="frame" x="162" y="89" width="100" height="20"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="38" id="2jK-gj-TiZ"/>
+                            <constraint firstAttribute="height" constant="20" id="2jK-gj-TiZ"/>
                             <constraint firstAttribute="width" constant="100" id="Uif-cW-K4n"/>
                         </constraints>
                     </view>
